css/index.css
/* Styles for the general looks for the TCRD Flex theme
 * in both light and dark modes
------------------------------------------------------- */

:root {
	/* Light Theme */
	/* --background-primary: var(--off-white);
	--background-secondary: var(--light-pink);
	--background-tertiary: var(--light-pink);
	--header-primary: black;
	--header-secondary: black;
	--text-primary: var(--grey27);
	--text-secondary: green;
	--text-link: blue;
	--text-link-alt: var(--grey20);
	--button-primary: white;
	--accent-primary: var(--red);
	--accent-secondary: var(--dark-red);
	--accent-tertiary: red;
	--accent-subtle: var(--light-pink);
	--accent-subtle-2: var(--salmon); */

	/* Dark Theme */
	--background-primary: var(--grey10);
	--background-secondary: var(--grey13-material);
	--background-tertiary: var(--grey27-material);
	--dropdown-primary: var(--grey20);
	--dropdown-secondary: var(--grey13-material);
	--header-primary: white;
	--header-secondary: var(--red);
	--header-primary-hover: var(--grey68);
	--header-secondary-hover: var(--dark-red);
	--text-primary: var(--light-brown);
	--text-secondary: var(--grey62-material);
	--text-link: white;
	--text-link-alt: var(--lighter-brown);
	--text-link-secondary: var(--red);
	--text-link-secondary-alt: var(--dark-red);
	--label-primary: var(--red);
	--navigation-primary: var(--dark-red);
	--navigation-secondary: white;
	--button-primary: var(--grey20);
	--button-secondary: var(--grey13-material);
	--button-tertiary: var(--grey10);
	--accent-primary: var(--dark-red);
	--accent-secondary: var(--darker-red);
	--accent-tertiary: var(--darker-red);
	--subtle-primary: var(--light-pink);
	--subtle-secondary: var(--salmon-material);
	--post-primary: var(--grey20);
	--post-secondary: var(--grey13-material);
	--post-tertiary:white;
	--quote-primary: var(--grey27-material);
	--quote-secondary: var(--grey20);
	--post-sticky-primary: var(--darker-red);
	--post-sticky-secondary: var(--darker-red);
	--post-locked-primary: var(--darker-red);
	--post-locked-secondary: var(--darker-red);


	/* Specific Colors */
	--off-white: 		#F2F2F2;
	--also-white: 		#FFFDFD;
	--light-pink: 		#F2ECEC;
	--pink-material: 	#FFCDD2;
	--salmon-material:	#EF9A9A;
	--red:				#B14E4f;
	--dark-red: 		#7F3031;
	--darker-red:		#541f1f;
	--red-material: 	#C62828;
	--dark-red-material:#B71C1C;
	--lightest-brown: 	#EFEBE9;
	--light-brown:		#D7CCC8;
	--grey88-material:	#E0E0E0;
	--grey68:			#AEAEAE;
	--grey62-material:	#9E9E9E;
	--grey38-material:	#616161;
	--grey27-material:	#424242;
	--grey20: 			#333333;
	--grey13-material:	#212121;
	--grey10: 			#1A1A1A;
}

/* Normal, standard links. */
a:link, a:visited
{
	color: var(--text-link);
	text-decoration: none;
}
a:hover
{
	color: var(--text-link-alt);
	text-decoration: underline;
	cursor: pointer;
}

/* Links that open in a new window. */
a.new_win:link, a.new_win:visited
{
	color: var(--text-link);
	text-decoration: none;
}
a.new_win:hover
{
	text-decoration: underline;
}

.btn-primary
{
	background-color: var(--accent-primary)
}

.btn-primary:hover, .btn-primary:focus
{
	background-color: var(--accent-secondary);
	border: 0 !important;
	border-bottom: 2px solid rgba(0,0,0,.2) !important;
}

/* Tables should show empty cells. */
table
{
	empty-cells: show;
}

/* Set a fontsize that will look the same in all browsers. */
body
{
	/* background: var(--background-primary) url(../images/theme/backdrop.png) repeat scroll 0 0; */
	background: var(--background-primary);
	font: 85%/130% "Verdana", "Arial", "Helvetica", sans-serif;
	margin: 0 auto;
	padding: 0;
}

/* Help popups require a different styling of the body element. */
body#help_popup
{
	padding: 1em;
}

/* use dark grey for the text, leaving #000 for headers etc */
body, td, th, tr
{
	color: var(--text-primary) !important;
}

/* This division wraps the entire forum when a forum width is set. */
div.wrapper
{
	margin: 0 auto;
	width: auto;
}

/* lets give all forms zero padding/margins */
form
{
	padding: 0;
	margin: 0;
}

.form-control:focus
{
	border-color: var(--accent-secondary)
}

/* Overall styling for color-themed forms */
.form-control
{
	color: var(--text-secondary);
	background-color: var(--background-primary);
	border: 1px solid var(--background-tertiary);
}

/* We can style the different types of input buttons to be uniform throughout different browsers and their color themes.
	.button_submit - covers input[type=submit], input[type=button], button[type=submit] and button[type=button] in all browsers
	.button_reset  - covers input[type=reset] and button[type=reset] throughout all browsers
	.input_check   - covers input[type=checkbox] throughout all browsers
	.input_radio   - covers input[type=radio] throughout all browsers
	.input_text    - covers input[type=text] throughout all browsers
	.input_file    - covers input[type=file] throughout all browsers
*/

/* All input fields should have the same rounded corners */
input, textarea
{
	border-radius: 3px !important;
	max-width: 99%;
}

input, button, select, textarea
{
	font: 95%/115% verdana, Helvetica, sans-serif;
	color: var(--text-primary);
	background: var(--background-primary);
	border: 1px solid #7f9db9;
	padding: 2px;
}

/* Select elements look horrible with the extra padding, so leave them unpadded. */
select
{
	padding: 0;
}

/* Add some padding to the options instead. */
select option
{
	padding: 1px;
}

/* The font size of textareas should be just a little bit larger. */
textarea
{
	font: 100%/130% verdana, Helvetica, sans-serif;
}

/* Buttons should be styled a bit differently, in order to make them look more button'ish. */
.button_submit, .button_reset
{
	/* TODO button */
	background: #cde7ff url(../images/theme/submit_bg.png) no-repeat;
	border: 1px solid #aaa;
	cursor: pointer;
	font-weight: normal;
}
input:hover, textarea:hover, button:hover, select:hover
{
	border: 1px solid #454545;
}
/* ... */

